# translator-mcp

./: .gitignore  README.md  pyproject.toml
translator_mcp/: server.py
